--- a/src/app/_layouts/character/character.component.scss
+++ b/src/app/_layouts/character/character.component.scss
@@ -15,6 +15,7 @@
     position: absolute;
     padding: 0;
     left: 1rem;
+    width: 25px;
 }
 
 .button-container {
@@ -23,7 +24,7 @@
     text-align: center;
 }
 
-.button-container button{
+.button-container button {
     color: #ffffff8c;
     padding: 2px;
     border: none;
