--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
-<body class="dark ">
+<body class="dark">
     <div class="page col-md-12 full-height">
         <div class="dead-center">
-            <img src="./../../../assets/resources/404.png">
+            <img [src]="path">
             <h1>Oops, it looks like there's nothing here.</h1>
         </div>
     </div>
