--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="page col-md-12">
+<div class="page col-md-12 main-panel">
     <div class="page-title">
         <h1>Upgrade materials domain daily rotation</h1>
     </div>
