--- a/src/app/_layouts/character/character.component.scss
+++ b/src/app/_layouts/character/character.component.scss
@@ -61,3 +61,26 @@
 .row-label {
     height: 16px;
 }
+
+.input-filter {
+    width: calc(100% - 30px);
+    margin: 0 15px;
+}
+
+.weapon-name {
+    display: inline-block;
+}
+
+.list-group-item {
+    background: none;
+    color: #ffffff8c;
+}
+
+.form-check-input:checked {
+    background-color: #ffffff8c;
+    border-color: #ffffff8c;
+}
+
+.form-check-input:focus {
+    box-shadow: 0 0 0 0.25rem rgba(255,255,255,.25);
+}
