--- a/src/app/_layouts/user-data/user-data.component.html
+++ b/src/app/_layouts/user-data/user-data.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-10">
+<div class="col-lg-12">
     <form #userData="ngForm">
         <div class="alert alert-warning alert-dismissible fade show text-left" role="alert" 
             *ngIf="alertSeen == 'false'">
@@ -9,11 +9,11 @@
             </button>
         </div>
         <div class="row text-left">
-            <label for="characters" class="form-label px-0">Characters</label>
+            <label for="characters" class="form-label px-0">Character Data</label>
         </div>
         <div class="row">
             <textarea class="form-control" id="characters" [(ngModel)]="characterString"
-                name="characters" #characters="ngModel" rows="8">
+                name="characters" #characters="ngModel" rows="8" spellcheck="false">
             </textarea>
         </div>
         <div class="row">
@@ -41,3 +41,5 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
     </button>
 </div>
+
+<app-loader *ngIf="loading"></app-loader>
