--- a/src/app/_shared/loader/loader.component.html
+++ b/src/app/_shared/loader/loader.component.html
@@ -1,7 +1,9 @@
 <div class="container">
-    <div class="circle circle-1"></div>
-    <div class="circle circle-2"></div>
-    <div class="circle circle-3"></div>
-    <div class="circle circle-4"></div>
-    <div class="circle circle-5"></div>
+    <div class="icon-1 icon pyro"></div>
+    <div class="icon-2 icon hydro"></div>
+    <div class="icon-3 icon anemo"></div>
+    <div class="icon-4 icon electro"></div>
+    <div class="icon-5 icon dendro"></div>
+    <div class="icon-6 icon cryo"></div>
+    <div class="icon-7 icon geo"></div>
 </div>
