fix windblume ode + image

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,7 +14,7 @@
 }
 
 .tab-content {
-    min-height: calc(100% - 54px);
+    min-height: calc(100% - 37px - 1.5rem);
 }
 
 .tab-content .tab-pane {
