--- a/src/app/_shared/navbar/navbar.component.html
+++ b/src/app/_shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <div class="logo-row">
             <a href="https://genshin.mihoyo.com">
