Didn't notice change was not getting detected

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
     <div class="tab-content">
         <div id="drops" role="tabpanel" aria-labelledby="data-tab"
             class="tab-pane fade show active">
-            <app-drops [characters]="characters"></app-drops>
+            <app-drops [characters]="characters" [change]="change"></app-drops>
         </div>
         <div id="characters" role="tabpanel" aria-labelledby="char-tab"
             class="tab-pane fade">
