fixed copy/paste mistake

--- a/src/app/_layouts/drops/drops.component.html
+++ b/src/app/_layouts/drops/drops.component.html
@@ -103,8 +103,8 @@
                                 class="mat" [ngClass]="weapon.quality">
                         </span>
                     </div>
-                    <div class="char-row" *ngIf="charWeapons.Decarabian.length > 0">
-                        <span *ngFor="let char of charWeapons.Decarabian">
+                    <div class="char-row" *ngIf="charWeapons.Dango.length > 0">
+                        <span *ngFor="let char of charWeapons.Dango">
                             <img [src]="char.path" [alt]="char.name" [title]="char.name"
                                 class="char">
                         </span>
