--- a/src/assets/sass/common.scss
+++ b/src/assets/sass/common.scss
@@ -140,6 +140,21 @@ button:focus {
     background: none;
 }
 
+.table-options {
+    font-size: 14px;
+    position: fixed;
+    right: 10px;
+    color: #8f9091;
+    background-color: rgba(13, 17, 23, 0.75);
+    border-radius: 0.5rem;
+    z-index: 1;
+}
+
+.table-option {
+    display: inline-block;
+    margin-left: 10px;
+}
+
 app-loader {
     position: absolute;
     z-index: 1;
