New weapons, new boss drop + 1 fix on deleting character where checkbox remained checked in character selection

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,7 +40,7 @@
             class="tab-pane fade">
             <div class="button-container">
                 <button type="button" title="Add character" data-bs-toggle="modal"
-                    data-bs-target="#addCharacter" class="d-block mb-3">
+                    data-bs-target="#addCharacter" class="d-block mb-3" (click)=loadCharData()>
                     <i class="fas fa-plus"></i>
                 </button>
                 <button type="button" title="Sort" data-bs-toggle="modal"
