--- a/src/app/_layouts/character/character.component.scss
+++ b/src/app/_layouts/character/character.component.scss
@@ -41,8 +41,8 @@
     background: none;
     border: none;
     transition: none;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .form-control:focus {
@@ -50,17 +50,11 @@
 }
 
 .portrait {
-    width: 100%;
-    height: 100%;
-    max-width: 110px;
-    max-height: 110px;
+    max-width: 7em;
+    max-height: 7em;
     cursor: pointer;
 }
 
 .stat-row {
     display: inline-block;
-}
-
-.row-label {
-    height: 16px;
 }
