--- a/src/app/_layouts/user-data/user-data.component.html
+++ b/src/app/_layouts/user-data/user-data.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
     <form #userData="ngForm">
-        <div class="alert alert-warning alert-dismissible fade show text-left" role="alert" 
+        <div class="alert alert-warning alert-dismissible show text-left" role="alert" 
             *ngIf="alertSeen == 'false'">
             The website may use cookies to personalise content. Those cookies are saved on
             your device and will not be used for any other purpose than to retain saved information on this website. 
